Very late commit of total redesign...

--- a/scss/text.scss
+++ b/scss/text.scss
@@ -35,6 +35,7 @@ body {
 }
 
 .main-input {
+	font-family: "Inconsolata", "Courier New", serif;
 	color: white;
 	display: block;
 	margin-top: 30px;
