--- a/scss/text.scss
+++ b/scss/text.scss
@@ -21,7 +21,49 @@ body {
 	font-family: "Inconsolata", "Courier New", serif;
 }
 
-.wrapper {
+.start-screen {
+	width: 400px;
+	margin: 10% auto;
+
+	button {
+		padding: 20px 40px;
+		background: white;
+		border: none;
+		display: block;
+		text-align: center;
+		outline: none;
+		font-family: "Inconsolata", "Courier New", serif;
+	}
+
+	.game-chooser {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+
+		li {
+			width: 200px;
+			height: 100px;
+			margin-bottom: 20px;
+			padding: 10px;
+
+			input[type="radio"] {
+				position: absolute;
+				left: -10000px;
+			}
+
+			label {
+				display: block;
+				width: 100%;
+				height: 100%;
+				background: white;
+				color: black;
+			}
+		}
+	}
+}
+
+.game-ui {
+	display: none;
 	width: 100%;
 	height: 100%;
 	padding: 20px;
